Bug 1561660 - Tweaked CSS for welcome modal on smaller resolutions

--- a/content-src/asrouter/components/ModalOverlay/_ModalOverlay.scss
+++ b/content-src/asrouter/components/ModalOverlay/_ModalOverlay.scss
@@ -25,6 +25,7 @@
   top: 20%;
   left: calc(50% - 480px); // halfway across minus half the width of the modal
   max-height: calc(100% - 100px);
+  overflow: scroll;
   background: $white;
   box-shadow: 0 1px 15px 0 $black-30;
   border-radius: 4px;
